# particles-on-canvas

./: .gitignore  .prettierrc.json  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
scripts/keep-alive/: Cargo.toml
scripts/keep-alive/src/: main.rs
server/: .env.example  .gitignore  cli.py  requirements.txt  util.py  wsgi.py
server/app/: __main__.py  configuration.py  main.py
server/app/controller/: heartbeat_controller.py  signature_controller.py
server/app/factory/: controller_factory.py
server/app/model/: generator.py  helper.py  neural_network.py
server/app/repository/: bucket_repository.py  signature_repository.py
server/app/service/: signature_service.py
web/: .env.example  .eslintignore  .eslintrc.json  .prettierignore  .prettierrc.json  CHANGELOG.md  components.json  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
web/.husky/: commit-msg  pre-commit
web/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
web/app/about/: page.tsx
web/app/components/: gallery.tsx  signature-details.tsx  signatures-view.tsx
web/app/contact/: page.tsx
web/app/create/: page.tsx
web/app/creations/: page.tsx
web/app/gallery/: page.tsx
web/app/generator/: page.tsx
web/app/mission/: page.tsx
web/components/: markdown-content.tsx
web/content/: about.md  mission.md  paper.md  paper.mdx
web/emails/: contact.tsx
web/lib/: api.ts  content.ts  utils.ts  version.ts
web/styles/: globals.css
(+54 files in other folders)
