[package]
name = "particles-on-canvas-keep-alive"
version = "1.0.0-beta"
edition = "2021"

[dependencies]
chrono = "0.4.37"
reqwest = { verison = "0.12.3", features = ["json"] }
serde = { verison = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
