[package]
name = "particles-on-canvas-keep-alive"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.37"
colored = "2.1.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
